# XUANOS

./: README.md
backend/: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260712_0001_initial.py  20260712_0002_core_flow.py  20260712_0003_align_index_names.py  20260714_0004_add_auth_sessions.py  20260714_0005_hypothesis_lifecycle.py  20260715_0006_shadow_evaluations.py  20260716_0007_seed_user_auth.py  20260716_0008_auth_constraints.py
backend/app/: __init__.py  main.py
backend/app/api/: dependencies.py  responses.py  router.py
backend/app/cli/: users.py
backend/app/core/: config.py  errors.py  idempotency.py  passwords.py  phone.py
backend/app/db/: __init__.py  base.py  seed.py  session.py
backend/app/engines/: __init__.py  action_engine.py  context.py  errors.py  evaluation.py  plan_engine.py  provider.py  schemas.py  understanding_engine.py
backend/app/models/: __init__.py  action_result.py  auth_session.py  auth_verification.py  goal.py  hypothesis.py  idempotency.py  plan.py  shadow_evaluation.py  snapshot.py  thread.py  understanding.py  user.py
backend/scripts/: __init__.py  run_shadow_evaluation.py
backend/tests/: auth_helpers.py  conftest.py  test_auth.py  test_core_flow.py  test_corrections.py  test_decision_engine_flow.py  test_demo_reset.py  test_health.py  test_identity_isolation.py  test_persistence.py  test_semantic_acceptance.py  test_shadow_evaluation.py  test_shadow_provider.py  test_shadow_runner.py  test_snapshot.py  test_threads.py
frontend/: .env.example  (+5 more)
(+146 files in other folders)
